# dex-lp-engine

./: .gitignore  README.md  env.example  pyproject.toml
src/: __init__.py  engine.py
src/core/: fee_math.py  il_math.py  pool_data.py  types.py
src/execution/: lp_executor.py  nonce_manager.py
src/hedging/: il_hedge.py  perp_executor.py
src/rebalancing/: rebalance_engine.py
src/strategies/: range_strategy.py
src/utils/: circuit_breaker.py  key_provider.py  metrics.py  pool_analytics.py  price_oracle.py  state_store.py  vol_estimator.py
tests/: test_circuit_breaker.py  test_hedge_manager.py  test_il_math.py  test_nonce_manager.py  test_range_strategy.py  test_state_store.py
